--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="content">
 
         <div class="logo">
-            <img src="/img/Logo fundo amarelo.png" alt="um pão">
+            <img src="./img/Logo fundo amarelo.png" alt="um pão">
             <h3>Delicias Artesanais</h3>
 
         </div>
@@ -69,7 +69,7 @@
            </p>
        </div> 
        <div class="img-padaria">
-        <img src="/img/padaria.jpg" alt="">
+        <img src="./img/padaria.jpg" alt="">
        </div>
     </div>
 </section>
