--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="itens-paesecafes">
 
         <div >
-            <img src="/img/pão de fermentação cacau.jpg" alt="">
+            <img src="img/pão de fermentação cacau.jpg" alt="">
             <div class="info">
                 <h3>Pão Artesanal</h3>
                 <h4>Pão de fermentação natural com Sabor Cacau e castanha<span>R$ 25,00</span></h4>
@@ -91,7 +91,7 @@
 
         </div>
         <div>
-            <img src="/img/pão de fermentação -multigrãos.jpg" alt="">
+            <img src="img/pão de fermentação -multigrãos.jpg" alt="">
             <div class="info">
                 <h3>Pão Artesanal</h3>
                 <h4>Pão de fermentação natural Sabor Multigrãos <span>R$ 22,00</span></h4>
@@ -100,7 +100,7 @@
 </div>
 
 <div >
-    <img src="/img/pão de fermentação - amendoas.jpg" alt="">
+    <img src="img/pão de fermentação - amendoas.jpg" alt="">
     <div class="info">
         <h3>Pão Artesanal</h3>
         <h4>Pão de fermentação natural Sabor Amendoas <span>R$ 18,00</span></h4>
@@ -108,7 +108,7 @@
     </div>
                 </div>
                 <div >
-                    <img src="/img/pão de fermentação- baguete.jpg" alt="">
+                    <img src="img/pão de fermentação- baguete.jpg" alt="">
                     <div class="info">
                         <h3>Pão Artesanal </h3>
                         <h4>Pão de fermentação natural tipo baguete <span>R$ 8,00</span></h4>
@@ -124,7 +124,7 @@
                         </div>
                         </div>
                         <div >
-                            <img src="/img/café latte.jpg" alt="">
+                            <img src="img/café latte.jpg" alt="">
                             <div class="info">
                                 <h3>Café Latte</h3>
                                 <h4>Café Expresso com leite vaporizado com crema<span>R$ 14,00</span></h4>
@@ -132,7 +132,7 @@
                             </div>
                             </div>
                             <div >
-                                <img src="/img/capuccino 02.jpg" alt="">
+                                <img src="img/capuccino 02.jpg" alt="">
                                 <div class="info">
                                     <h3>Capuccino</h3>
                                     <h4>Expresso com leite vaporizado cacau e canela <span>R$ 16,00</span></h4>
@@ -140,7 +140,7 @@
                                 </div>
                             </div>
                                 <div>
-                                    <img src="/img/cafe expresso.jpg" alt="">
+                                    <img src="img/cafe expresso.jpg" alt="">
                                     <div class="info">
                                         <h3>Café Expresso</h3>
                                         <h4>Café Expresso simples e duplo grãos selecionados <span>R$ 10,00</span></h4>
