--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Delicias Artesanais</title>
 </head>
 <body>
-    <!-- Cabeçalho/Menu -->
+    <!-- Cabeçalho/Menu/Navbar -->
     <header class="content">
 
         <div class="logo">
@@ -27,6 +27,7 @@
 <li><a href="#"><i class="bi bi-cart3"></i></a></li>
             </ul>
         </nav>
+
         <!-- Menu Hamburguer -->
 
         <div class="menu-toggle">
@@ -37,20 +38,24 @@
 
         </div>
     </header>
-<!-- Pagina inicial do site -->
+
+<!-- Pagina Incial com section -->
+ <!-- Primeira Section -->
 
     <section class="first-section" id="home"> 
         <div class="conteudo-principal">
            <h1>Pães de fermentação Artesanais e Cafés</h1> 
            <h2>Suas Manhãs e Tardes mais saborosas</h2>
+          
            <div class="btn">
-
+            
             <button class="reservar">Faça sua Encomenda</button>
             <button class="montar">Delivery</button>
            </div>
+
         </div>  
 
-<!-- Sobre Nós -->
+<!-- Segunda Section/Sobre Nós -->
 
     </section>
 <section class="sobre-nos" id="sobrenos">
@@ -74,7 +79,7 @@
     </div>
 </section>
 
-<!-- Seção dos Produtos -->
+<!-- Terceira Section/Produtos -->
 
 <section class="paesecafes" id="paesecafes">
 
@@ -148,7 +153,7 @@
                                     </div>
     </div>
 </section>
-<!-- Seção de Contatos -->
+<!-- Quarta Section/Contatos -->
 
 <section class="contatos" id="contatos">
 
@@ -169,7 +174,7 @@
     </div>
 </section>
 
-<!-- Footer/rodapé -->
+<!-- Quinta section/Footer -->
 <footer>
     <h4>Desenvolvido por Andressa Cabral</h4>
 </footer>
