--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Styles/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <title>Delicias Artesanais</title>
+    <link rel="shortcut icon" href="img/Delícias_Artesanais__2_-removebg-preview.png" type="image/x-icon">
+    <title>Delicias Artesanais e cafes</title>
 </head>
 <body>
     <!-- Cabeçalho/Menu/Navbar -->
     <header class="content">
 
         <div class="logo">
-            <img src="img/Logo fundo amarelo.png" alt="um pão">
-            <h3>Delicias Artesanais</h3>
+            <img src="img/Delícias_Artesanais__2_-removebg-preview.png" alt="um pão">
+            
 
         </div>
         <nav>
